--- a/zwave2mqtt-dev/Dockerfile
+++ b/zwave2mqtt-dev/Dockerfile
@@ -93,17 +93,19 @@ ARG BUILD_VERSION
 # Labels
 LABEL \
     io.hass.name="Z-Wave to MQTT dev" \
-    io.hass.description="Fully configurable Z-Wave to MQTT gateway and control panel." \
+    io.hass.description="Fully configurable Z-Wave to MQTT gateway and control panel" \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="addon" \
     io.hass.version=${BUILD_VERSION} \
     maintainer="Irinel Porcariu <irinel.porcariu@gmail.com>" \
-    org.label-schema.description="Fully configurable Z-Wave to MQTT gateway and control panel." \
-    org.label-schema.build-date=${BUILD_DATE} \
-    org.label-schema.name="Z-Wave to MQTT" \
-    org.label-schema.schema-version="1.0" \
-    org.label-schema.url="https://community.home-assistant.io/t/home-assistant-community-add-on-z-wave-to-mqtt/115899?u=frenck" \
-    org.label-schema.usage="https://github.com/hassio-addons/addon-zwave2mqtt/tree/master/README.md" \
-    org.label-schema.vcs-ref=${BUILD_REF} \
-    org.label-schema.vcs-url="https://github.com/hassio-addons/addon-zwave2mqtt" \
-    org.label-schema.vendor="Home Assistant Community Add-ons"
+    org.opencontainers.image.title="Z-Wave to MQTT" \
+    org.opencontainers.image.description="Fully configurable Z-Wave to MQTT gateway and control panel" \
+    org.opencontainers.image.vendor="Home Assistant Community Add-ons" \
+    org.opencontainers.image.authors="Irinel Porcariu <irinel.porcariu@gmail.com>" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="" \
+    org.opencontainers.image.source="https://github.com/outkastm/my-hassio-addons" \
+    org.opencontainers.image.documentation="https://github.com/outkastm/my-hassio-addons/blob/master/zwave2mqtt-dev/README.md" \
+    org.opencontainers.image.created=${BUILD_DATE} \
+    org.opencontainers.image.revision=${BUILD_REF} \
+    org.opencontainers.image.version=${BUILD_VERSION}
