--- a/addon.yml
+++ b/addon.yml
@@ -8,11 +8,11 @@ variables:
   ADDON_SLUG: "example"
   ADDON_TARGET: "example"
 
-  ADDON_AARCH64: "true"
-  ADDON_AMD64: "true"
-  ADDON_ARMHF: "true"
+  ADDON_AARCH64: "false"
+  ADDON_AMD64: "false"
+  ADDON_ARMHF: "false"
   ADDON_ARMV7: "true"
-  ADDON_I386: "true"
+  ADDON_I386: "false"
 
   ADDON_AARCH64_BASE: "hassioaddons/base-aarch64:latest"
   ADDON_AMD64_BASE: "hassioaddons/base-amd64:latest"
