--- a/addon.yml
+++ b/addon.yml
@@ -38,7 +38,7 @@ variables:
   PREFLIGHT_YAMLLINT: "true"
 
   DOCKER_DRIVER: overlay2
-  DOCKER_HUB_ORG: hassioaddons
+  DOCKER_HUB_ORG: outkastm
 
 stages:
   - preflight
